tests/pass/UnaryPlus.java
package pass;

import java.lang.Character;
import java.lang.Integer;

public class UnaryPlus {
	public int promoteChar(char x) {
		return +x;
	}

	public int promoteInteger(Integer x) {
		return +x;
	}

	public int promoteCharacter(Character x) {
		return +x;
	}
}
