tests/fail/PostfixInc.java
package fail;

import java.lang.System;

public class PostfixInc {
    public static void main(String[] args) {
	char x = 'a';
	System.out.println(x++);
    }
}
